<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".MainActivity"
    android:padding="15dp"

    android:orientation="vertical">


    <!--    <TextView-->
<!--        android:id="@+id/spotify_user_logged"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="10dp"-->
<!--        android:text="@string/spotify_user_text" />-->


    <TextView
        android:id="@+id/user_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/circular_book"
        android:gravity="center"
        android:text="@string/sign_out"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/user_email_welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/circular_std_bold"
        android:gravity="center"
        android:text="______"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1"/>

    <TextView
        android:id="@+id/mainActivityWelcomeHeading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/circular_std_bold"
        android:gravity="center"
        android:text="@string/welcomeToMain"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.17"/>

    <Button
        android:id="@+id/spotifyAPI_login"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:fontFamily="@font/circular_std_bold"
        android:gravity="center"
        android:text="Connect Spotify Account"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.07"
        app:layout_constraintTop_toBottomOf="@+id/mainActivityWelcomeHeading" />

    <ImageButton
        android:id="@+id/settings"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="2dp"
        android:fontFamily="@font/circular_book"
        android:gravity="center"
        android:scaleX="2.5"
        android:scaleY="2.5"
        android:src="@drawable/settings_black_24dp"
        android:text="@string/settings"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/sign_out_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:fontFamily="@font/circular_book"
        android:gravity="center"
        android:text="@string/sign_out"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainActivityWelcomeHeading" />

    <!--    <Button-->
<!--        android:id="@+id/get_database_data_button"-->
<!--        android:layout_width="200dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_gravity="center_horizontal"-->
<!--        android:fontFamily="@font/circular_book"-->
<!--        android:text="Get Data"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/mainActivityWelcomeHeading" />-->

    <Button
        android:id="@+id/delete_account_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:backgroundTint="#9E4848"
        android:fontFamily="@font/circular_book"
        android:text="Delete Account"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainActivityWelcomeHeading"
        app:layout_constraintVertical_bias="0.9"/>

    <Button
        android:id="@+id/reset_password_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:fontFamily="@font/circular_book"
        android:text="Reset Password"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainActivityWelcomeHeading"
        app:layout_constraintVertical_bias="0.7" />

    <Button
        android:id="@+id/background_mode_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:fontFamily="@font/circular_book"
        android:gravity="center"
        android:text="@string/disable_dark_mode"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainActivityWelcomeHeading"
        app:layout_constraintVertical_bias="0.3"/>


</androidx.constraintlayout.widget.ConstraintLayout>
